force-app/main/default/objects/WorkOrderLineItem/fields/Address_complement__c.field-meta.xml
<CustomField>
    <fullName>Address_complement__c</fullName>
    <label>Address complement</label>
    <length>200</length>
    <type>Text</type>
</CustomField>