force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_Costo_de_Materiales__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Costo_de_Materiales__c</fullName>
    <label>Costo de Materiales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>