force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_New_EndDate__c.field-meta.xml
<CustomField>
    <fullName>CoIT_New_EndDate__c</fullName>
    <label>Nueva fecha de Finalización</label>
    <type>DateTime</type>
</CustomField>