force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_New_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CoIT_New_StartDate__c</fullName>
    <label>Nueva Fecha de Inicio</label>
    <type>DateTime</type>
</CustomField>