force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_Reparation_Plan_Register__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Reparation_Plan_Register__c</fullName>
    <label>Registro Plan Reparación</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>