force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_Servicio_mediante_videollamada__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Servicio_mediante_videollamada__c</fullName>
    <formula>IF(WorkOrder.CoIT_Servicio_mediante_videollamada__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Servicio mediante videollamada?</label>
    <type>Checkbox</type>
</CustomField>