force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Total_Cost__c</fullName>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>