force-app/main/default/objects/WorkOrderLineItem/fields/CoIT_WorkType_Name__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WorkType_Name__c</fullName>
    <formula>WorkType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Tipo de Trabajo</label>
    <type>Text</type>
</CustomField>