force-app/main/default/objects/WorkOrderLineItem/validationRules/WOLI_Completed.validationRule-meta.xml
<ValidationRule>
    <fullName>WOLI_Completed</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  ISPICKVAL( PRIORVALUE(Status), &apos;Completed&apos;) , true, false)</errorConditionFormula>
    <errorMessage>No puede modificar un vez que ha sido completada</errorMessage>
</ValidationRule>